--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
 {
+  "bracketSpacing": true,
+  "endOfLine": "auto",
+  "htmlWhitespaceSensitivity": "css",
+  "proseWrap": "preserve",
+  "trailingComma": "all",
+  "useTabs": false,
+  "tabWidth": 4,
+  "semi": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "jsxSingleQuote": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "printWidth": 120
 }
