--- a/package.json
+++ b/package.json
@@ -7,6 +7,13 @@
     "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
+    "@snowpack/plugin-run-script": "^2.2.1",
+    "@snowpack/plugin-sass": "^1.2.0",
+    "antd": "^4.9.4",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
+    "mobx-react-lite": "^3.1.6",
+    "mobx-state-tree": "^4.0.2",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -20,8 +27,18 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.2",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "@web/test-runner": "^0.10.0",
     "chai": "^4.2.0",
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unused-imports": "^1.0.1",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
     "typescript": "^4.0.0"
