--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@snowpack/plugin-run-script": "^2.2.1",
     "@snowpack/plugin-sass": "^1.2.0",
     "antd": "^4.9.4",
+    "date-fns": "^2.16.1",
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "mobx-react-lite": "^3.1.6",
     "mobx-state-tree": "^4.0.2",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-doc-viewer": "^0.1.5",
+    "react-dom": "^17.0.0",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
+    "@snowpack/plugin-babel": "^2.1.5",
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.3.9",
     "@snowpack/plugin-typescript": "^1.1.1",
@@ -41,6 +47,7 @@
     "eslint-plugin-unused-imports": "^1.0.1",
     "prettier": "^2.0.5",
     "snowpack": "^2.18.4",
-    "typescript": "^4.0.0"
+    "snowpack-plugin-svgr": "^0.1.2",
+    "typescript": "^4.1.3"
   }
 }
