--- a/package.json
+++ b/package.json
@@ -9,16 +9,9 @@
   "dependencies": {
     "@snowpack/plugin-run-script": "^2.2.1",
     "@snowpack/plugin-sass": "^1.2.0",
-    "antd": "^4.9.4",
-    "date-fns": "^2.16.1",
-    "mobx": "^6.0.4",
-    "mobx-react": "^7.0.5",
-    "mobx-react-lite": "^3.1.6",
-    "mobx-state-tree": "^4.0.2",
     "react": "^17.0.0",
     "react-doc-viewer": "^0.1.5",
-    "react-dom": "^17.0.0",
-    "serve": "^11.3.2"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.12.10",
